# snake_evolution

./: CMakeLists.txt  README.md  README.txt  demo  presentation.url  snake_evolution.cpp  test_opengl.cpp
include/: game.hpp  image_data.hpp  program.hpp  shader_code.hpp  texture.hpp  utils.hpp
lib/: game.cpp  program.cpp  texture.cpp
